--- a/public/css/image-byline-public.css
+++ b/public/css/image-byline-public.css
@@ -1,6 +1,8 @@
 .image-credit {
-    padding: 5px 0;
+    padding: 0;
     font-size: 12px;
+    margin-top: 1em;
+    margin-bottom: 1em;
 }
 .image-caption {
     font-weight: bold;
